[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UserInterface/3DMenuScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/Fader.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/murder.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/default_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/UserInterface/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/main_theme.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/button_hover.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 256
font_data = ExtResource( 3 )

[node name="MainMenu" type="Spatial"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Fader" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="CanvasLayer/Fader"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Fader/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Fader/Control/VBoxContainer"]
margin_top = 43.0
margin_right = 1024.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Horor Maze"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Fader/Control/VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer"]
margin_left = 435.0
margin_top = 107.0
margin_right = 588.0
margin_bottom = 191.0

[node name="StartButton" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "Start Game"
flat = true

[node name="QuitButton" type="Button" parent="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 153.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 4 )
text = "Quit Game"
flat = true

[node name="3DMenuScene" parent="." instance=ExtResource( 1 )]

[node name="MusicTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="HoverButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Fader/Control/VBoxContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
